$Id$
===============================================================

9	Emmanuel Galanos <egalanos@anchor.net.au>

	* don't use absolute path for loading NSS library
	* return error codes to caller (useful for scripts)
	* limit number of realloc tries for NSS_STATUS_TRYAGAIN
	* don't use DB transactions for updating (this uses
	  mktemp but as /var/db should not be world writeable,
	  we don't believe there to be a race condition)

8	Guido Guenther <agx@sigxcpu.org>

	* load database into a temporary file for atomic
	  switchover

7	Guido Guenther <agx@sigxcpu.org>

	* fix a segfault in cache.c

6	Guido Guenther <agx@sigxcpu.org>

	* fix incorrectly applied patches

5	Guido Guenther <agx@sigxcpu.org>

	* properly truncate the database in the db4 case,
	  otherwise old entries (no longer in the ldap tree)
	  won't get removed - we do the same for db3
	* properly close the database before closing the
	  environment. According to the docs we should do so
	  before closing the environment
	* use DB_AUTO_COMMIT with db->open so aborting the
	  transaction works properly. The old method of passing
	  the transaction ID doesn't seem to work with more recent
	  libdb4.3 and libd4.4 releases. Without that you'll get a
	  corrupted db when running nss_updatedb without a reachable
	  ldap server.

4	Luke Howard <lukeh@padl.com>

	* fix BUG#206

3	Luke Howard <lukeh@padl.com>

	* support for DB 4.x
	* transact database update if DB library supports
	  transactions
	* make path configurable with DB_DIR
	* support for "db_nss" library

2	Luke Howard <lukeh@padl.com>

	* fix DB build error

1	Luke Howard <lukeh@padl.com>

	* initial version
