@@ -8,3 +8,5 @@ nss_updatedb_SOURCES = main.c cache.c updatedb.c
 
 nss_updatedb_LDADD = -ldl
 
+man_MANS = nss_updatedb.8
+
