@@ -2,7 +2,7 @@ AC_INIT(updatedb.c)
 AC_CANONICAL_SYSTEM
 AC_PREFIX_DEFAULT()
 
-AM_INIT_AUTOMAKE(nss_updatedb, 9)
+AM_INIT_AUTOMAKE(nss_updatedb, 10)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
